/**
 * 购物车服务
 */
syntax = "proto3";

package cart;

option go_package = "./proto;cart";

import "google/protobuf/empty.proto";
import "validate/validate.proto";
import "common/req.proto";
import "common/type.proto";

// 购物车服务接口给定义
service Cart {
  /// 添加购物车
  rpc AddCart(AddReq) returns (google.protobuf.Empty);
  /// 更新购物车
  rpc EditCart(EditReq) returns (google.protobuf.Empty);
  /// 更新购物车数量
  rpc EditCartNum(AddReq) returns (google.protobuf.Empty);
  /// 删除购物项
  rpc DelCart(common.SkuIDReq) returns (google.protobuf.Empty);
  /// 清空购物车
  rpc ClearCart(google.protobuf.Empty) returns (google.protobuf.Empty);
  /// 我的购物车
  rpc MyCart(google.protobuf.Empty) returns (CartsReply);
  /// ---- 以下内部调用 ----
  /// 批量获取购物车信息
  rpc BatchGetCarts(SkusReq) returns (CartsReply);
  /// 批量删除购物车
  rpc BatchDelCarts(SkusReq) returns (google.protobuf.Empty);
}

// ---- 请求结构 ----

// 添加购物车请求结构
message AddReq {
  int64 sku_id = 2 [(validate.rules).int64.gt = 0]; /// sku_id
  int32 num = 3 [(validate.rules).int32.gt = 0]; /// 数量
}

// 修改购物车购微项请求结构
message EditReq {
  int64 old_sku_id = 2 [(validate.rules).int64.gt = 0]; /// 修改前商品id
  int64 new_sku_id = 3 [(validate.rules).int64.gt = 0]; /// 修改后商品id
  int32 num = 4 [(validate.rules).int32.gt = 0];  /// 数量
}

// 多sku_id请求结构
message SkusReq {
  repeated int64 sku_ids = 2 [(validate.rules).repeated.min_items = 1]; /// sku_id数组
}

// ---- 响应结构 ----

// 购物车列表
message CartsReply {
  repeated common.Cart data = 1;
}
