/**
 * 第三方服务,短信，支付
 */
syntax = "proto3";

package thirdparty;

option go_package = "./proto;core";

import "google/protobuf/empty.proto";
import "validate/validate.proto";

/**
 * 第三方服务接口定义
 */
service ThirdParty {
	/// 发送短信验证码
	rpc SendSMS(SendSMSReq) returns (CodeReply);
	/// 短信验证码验证
	rpc CheckVCode(VCodeReq) returns (google.protobuf.Empty);
	/// 以太币支付检测
	rpc CheckETHPay(ETHPayReq) returns (google.protobuf.Empty);
}

// 手机号请求结构
message SendSMSReq {
	string phone = 1 [(validate.rules).string.len = 11]; /// 手机号
}

// 检测手机验证码合法请求结构
message VCodeReq {
	int64 phone = 1 [(validate.rules).int64.gt = 0];  /// 手机号
	string code = 2 [(validate.rules).string.len = 6];  /// 验证码
}

// 以太币支付检测请求结构
message ETHPayReq {
	int64 id = 1 [(validate.rules).int64.gt = 0];       /// 支付合约id
	string address = 2 [(validate.rules).string.min_len = 3]; /// 支付合约地址
	string orderNo = 3 [(validate.rules).string.min_len = 3]; /// 订单号
}

// 发送短信响应结构
message CodeReply {
	string code = 1;  /// 验证码
}